# housing-market-simulation

./: .gitignore  .pre-commit-config.yaml  _config.yml  pyproject.toml  renuion.md  todo.md
.binder/: Dockerfile  postBuild
.github/workflows/: build.yml
analytics/: __init__.py  pipeline.py  types.py
analytics/bronze/: __init__.py  fact_table.py  schemas.py
analytics/bronze/event_facts/: __init__.py  process.py  schema.py
analytics/gold/: __init__.py  bootstrap.py  model.py  schemas.py  smooth.py  smooth_gold.py  tables.py  transformer.py
analytics/gold/agent_population/: __init__.py  process.py  schema.py
analytics/gold/demolition_age/: __init__.py  process.py  schema.py
analytics/gold/house_age/: __init__.py  process.py  schema.py
analytics/gold/house_rents/: __init__.py  process.py  schema.py
analytics/gold/house_supply/: __init__.py  process.py  schema.py
analytics/gold/housed_renter_wealth/: __init__.py  process.py  schema.py
analytics/gold/houses_per_landlord/: __init__.py  process.py  schema.py
analytics/gold/landlord_population/: __init__.py  process.py  schema.py
analytics/gold/landlord_proportion/: __init__.py  process.py  schema.py
analytics/gold/landlord_wealth/: __init__.py  process.py  schema.py
analytics/gold/market_balance/: __init__.py  process.py  schema.py
analytics/gold/migration_flows/: __init__.py  process.py  schema.py
analytics/gold/occupancy_timeline/: __init__.py  process.py  schema.py
analytics/gold/rent_comparison/: __init__.py  process.py  schema.py
analytics/gold/rent_duration_rolling/: __init__.py  process.py  schema.py
analytics/gold/rent_payments/: __init__.py  process.py  schema.py
analytics/gold/rent_to_income/: __init__.py  process.py  schema.py
analytics/gold/renter_wealth/: __init__.py  process.py  schema.py
analytics/gold/smoother/: __init__.py  base.py  lowess.py
analytics/gold/tenure/: __init__.py  process.py  schema.py
analytics/gold/time_to_rent_rolling/: __init__.py  process.py  schema.py
analytics/gold/vacancy_count/: __init__.py  process.py  schema.py
analytics/gold/wealth_quartiles/: __init__.py  process.py  schema.py
analytics/gold/wealth_spread/: __init__.py  process.py  schema.py
analytics/persistence/: __init__.py  engine.py  feather.py  frictionless.py  manager.py
analytics/silver/: __init__.py  aggregates.py  model.py  projections.py  schemas.py  store.py  transformer.py
analytics/silver/asking_rent/: __init__.py  process.py  schema.py
analytics/silver/house_age/: __init__.py  process.py  schema.py
analytics/silver/house_supply/: __init__.py  process.py  schema.py
analytics/silver/landlord_population/: __init__.py  process.py  schema.py
analytics/silver/occupancy/: __init__.py  (+2 more)
book/: _config.yml  _toc.yml  bibliography.bib
book/chapters/: 00_how_to_use.ipynb  01_markdown.md  02_jupyter.ipynb  03_simulation.ipynb
core/: __init__.py  agent.py  base.py  engine.py  first.py  market.py  runner.py  settings.py
core/agent/: __init__.py  agent.py
core/analytics/: __init__.py  fact_table.py  projections.py  schemas.py
core/base/: __init__.py  frozen_model.py
core/context/: __init__.py  context.py
core/engine/: __init__.py  queue.py  result.py  simulation.py
core/entity/: __init__.py  entity.py  identity.py  stochastic.py
core/events/: __init__.py  aging.py  auction.py  base.py  bid.py  construction.py  eviction.py  income.py  landlord_migration.py  maintenance.py  migration.py  rent.py  tax.py
core/factory/: __init__.py  base.py  single_landlord.py
core/house/: __init__.py  house.py  state.py
core/market/: __init__.py  market.py
core/plots/: __init__.py  avg_rent.py  house_rents.py  housed_renter_wealth.py  occupancy.py  paid_vs_asked.py  renter_wealth.py  time_to_rent.py  vacancy.py
core/policies/: __init__.py  homeless_bidding.py  income.py  protocol.py
core/registry/: __init__.py  registry.py
core/settings/: __init__.py  settings.py
core/signals/: __init__.py  signals.py
viz/: __init__.py  avg_rent.py  base.py  demolition_age.py  fast.py  house_age.py  house_rents.py  house_supply.py  housed_renter_wealth.py  houses_per_landlord.py  landlord_population.py  landlord_proportion.py  landlord_wealth.py  market_balance.py  occupancy.py  paid_vs_asked.py  population.py  rent_duration.py  rent_to_income.py  renter_wealth.py  tenure.py  time_to_rent.py  vacancy.py  visualizer.py  wealth_quartiles.py
(+33 files in other folders)
